force-app/main/default/objects/Opportunity/fields/LD_Unit_OOS_Damage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LD_Unit_OOS_Damage_Frequency__c</fullName>
    <label>LD Unit OOS Damage Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Occurence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>