force-app/main/default/objects/Opportunity/fields/LD_Unit_OOS_Hours_Condition__c.field-meta.xml
<CustomField>
    <fullName>LD_Unit_OOS_Hours_Condition__c</fullName>
    <label>LD Unit OOS Hours Condition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>