force-app/main/default/objects/Opportunity/fields/Major_Repair_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Major_Repair_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Repair Coverage</label>
    <type>Checkbox</type>
</CustomField>