force-app/main/default/objects/Opportunity/fields/MCP_Required__c.field-meta.xml
<CustomField>
    <fullName>MCP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCP Required</label>
    <type>Checkbox</type>
</CustomField>