force-app/main/default/objects/Opportunity/fields/Mechanic_1_7_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_1_7_Billing_Rate__c</fullName>
    <description>Mechanic rate on 1.7x overtime.</description>
    <label>Mechanic 1.7x Billing Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>