force-app/main/default/objects/Opportunity/fields/mechanic_double_billing_rate__c.field-meta.xml
<CustomField>
    <fullName>mechanic_double_billing_rate__c</fullName>
    <description>Mechanic rate on 2x overtime (Sunday &amp; Holiday)</description>
    <inlineHelpText>Double time billing rate</inlineHelpText>
    <label>Mechanic 2x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>