force-app/main/default/objects/Opportunity/fields/Mechanic_Standard_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_Standard_Billing_Rate__c</fullName>
    <description>Mechanic rate during normal business hours.</description>
    <label>Mechanic Standard Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>