force-app/main/default/objects/Opportunity/fields/Minor_Repair_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Minor_Repair_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minor Repair Coverage</label>
    <type>Checkbox</type>
</CustomField>