force-app/main/default/objects/Opportunity/fields/Monthly_Fire_Service_Testing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fire_Service_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Fire Service Testing</label>
    <type>Checkbox</type>
</CustomField>