force-app/main/default/objects/Opportunity/fields/Monthly_Stand_By_Power_Operation_Test__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Stand_By_Power_Operation_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Stand By Power Operation Test</label>
    <type>Checkbox</type>
</CustomField>