force-app/main/default/objects/Opportunity/fields/Months_Since_Start__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Start__c</fullName>
    <formula>MONTH( TODAY() ) + (( 12 * (YEAR(TODAY())- YEAR(Start_Date__c))) - MONTH(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Since Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>