force-app/main/default/objects/Opportunity/fields/Next_Price_Increase_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Price_Increase_Date__c</fullName>
    <label>Next Price Increase Date</label>
    <type>Date</type>
</CustomField>