force-app/main/default/objects/Opportunity/fields/Notification_Prior_to_Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Notification_Prior_to_Testing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Prior to Testing Required</label>
    <type>Checkbox</type>
</CustomField>