force-app/main/default/objects/Opportunity/fields/Number_of_Elevators__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Elevators__c</fullName>
    <label>Number of Elevators</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>