force-app/main/default/objects/Opportunity/fields/Obsolescence_Language__c.field-meta.xml
<CustomField>
    <fullName>Obsolescence_Language__c</fullName>
    <description>Obsolescence is when parts become obsolete or are not longer manufactured by the OEM.</description>
    <inlineHelpText>Obsolescence is when parts become obsolete or are not longer manufactured by the OEM.</inlineHelpText>
    <label>Obsolescence Language</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>