force-app/main/default/objects/Opportunity/fields/OT_Callbacks_included_if__c.field-meta.xml
<CustomField>
    <fullName>OT_Callbacks_included_if__c</fullName>
    <label>OT Callbacks included if:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passanger Entrapment</fullName>
            </value>
            <value>
                <fullName>Elevator Group Control System Malfunction</fullName>
            </value>
            <value>
                <fullName>Two or More Elevators Out in a Bank</fullName>
            </value>
            <value>
                <fullName>Emergency Service</fullName>
            </value>
            <value>
                <fullName>Dispatching failure</fullName>
            </value>
            <value>
                <fullName>Service car failure</fullName>
            </value>
            <value>
                <fullName>Parking garage elevator failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>