force-app/main/default/objects/Opportunity/fields/Overtime_Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Repair_Cost__c</fullName>
    <formula>IF(TEXT(Call_Back_Coverage__c) = &apos;24 Hours&apos;, 

    &quot;Included in contract&quot;, 

    IF(TEXT(Call_Back_Coverage__c) = &apos;Regular Business Hours - Defined&apos;, 

        &quot;Full Price&quot;, 

        IF(TEXT(Call_Back_Coverage__c) = &apos;Regular Business Hours - Undefined&apos;, 

            &quot;Full Price&quot;, 

            IF(TEXT(Call_Back_Coverage__c) = &apos;Regular Business Hours with Conditions&apos; &amp;&amp; Bonus_Time_Only__c = TRUE, 

                &quot;Bonus time only&quot;, 

                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Repair Cost</label>
    <type>Text</type>
</CustomField>