force-app/main/default/objects/Opportunity/fields/Parts_Mark_Up_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Parts_Mark_Up_Maximum__c</fullName>
    <label>Parts Mark Up Maximum</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>