force-app/main/default/objects/Opportunity/fields/Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase__c</fullName>
    <inlineHelpText>Price Increase Maximum Percentage</inlineHelpText>
    <label>Price Increase</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>