force-app/main/default/objects/Opportunity/fields/Price_Increase_justification__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_justification__c</fullName>
    <label>Price Increase Justification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified Increase Justification</fullName>
            </value>
            <value>
                <fullName>80 Labor/20 Material</fullName>
            </value>
            <value>
                <fullName>Labor Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>