force-app/main/default/objects/Opportunity/fields/price_increase_Maximum__c.field-meta.xml
<CustomField>
    <fullName>price_increase_Maximum__c</fullName>
    <description>Maximum price increase allowed by contract - If contract is mute select &quot;no maximum&quot;.</description>
    <inlineHelpText>Maximum price increase allowed by contract - If contract is mute select &quot;no maximum&quot;.</inlineHelpText>
    <label>Price Increase Maximum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Maximum</fullName>
            </value>
            <value>
                <fullName>No Price</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>