force-app/main/default/objects/Opportunity/fields/Price_Increase_Message__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Message__c</fullName>
    <formula>IF(TEXT(price_increase_Maximum__c) = &apos;Percentage&apos;, 

TEXT(Price_Increase__c * 100) + &quot;%&quot; , 

TEXT(price_increase_Maximum__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Increase Message</label>
    <type>Text</type>
</CustomField>