force-app/main/default/objects/Opportunity/fields/Reponse_Time_ST_Entrapment__c.field-meta.xml
<CustomField>
    <fullName>Reponse_Time_ST_Entrapment__c</fullName>
    <label>Response Time-ST-Entrapment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>