force-app/main/default/objects/Opportunity/fields/Response_Time_OT_Entrapment__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_OT_Entrapment__c</fullName>
    <label>Response Time-OT-Entrapment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>