force-app/main/default/objects/Opportunity/fields/Response_Time_ST_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_ST_In_Hours__c</fullName>
    <label>Response Time ST (In Hours)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>