force-app/main/default/objects/Opportunity/fields/Right_To_Audit_Clause__c.field-meta.xml
<CustomField>
    <fullName>Right_To_Audit_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right To Audit Clause</label>
    <type>Checkbox</type>
</CustomField>