force-app/main/default/objects/Opportunity/fields/saasoptics__auto_process__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__auto_process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to automatically process Opportunities when they sync to SaaSOptics</inlineHelpText>
    <label>SaaSOptics Auto-process</label>
    <type>Checkbox</type>
</CustomField>