force-app/main/default/objects/Opportunity/fields/Testing_Completed_Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Testing_Completed_Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing Completed Notification Required</label>
    <type>Checkbox</type>
</CustomField>