force-app/main/default/objects/Opportunity/fields/Type_of_Vendor_Contract__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vendor_Contract__c</fullName>
    <label>Type of Vendor Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum Plus</fullName>
            </value>
            <value>
                <fullName>Inspection Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>