force-app/main/default/objects/Opportunity/fields/Unit_OOS_Liquidated_Damage__c.field-meta.xml
<CustomField>
    <fullName>Unit_OOS_Liquidated_Damage__c</fullName>
    <label>Unit OOS Liquidated Damage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>