force-app/main/default/objects/Opportunity/fields/Units_Requiring_OT_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Units_Requiring_OT_Maintenance__c</fullName>
    <label>Units Requiring OT Maintenance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>