force-app/main/default/objects/Opportunity/fields/Vendor_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contract_Number__c</fullName>
    <inlineHelpText>Vendor&apos;s contract Number, also known as Customer Number.  Schindler data seems to label the same field two ways.</inlineHelpText>
    <label>Vendor Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>