force-app/main/default/objects/Opportunity/fields/Vendor_Contract_Stage__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contract_Stage__c</fullName>
    <label>Vendor Contract Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Data Loading</fullName>
            </value>
            <value>
                <fullName>Vendor_Contract_Active</fullName>
                <label>Vendor Contract Active</label>
            </value>
            <value>
                <fullName>Vendor Contract - Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>