force-app/main/default/objects/Opportunity/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <formula>Account.Vendor_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Email</label>
    <type>Text</type>
</CustomField>