force-app/main/default/objects/Opportunity/fields/Vendor_Portal_Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Portal_Access_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Portal Access Required</label>
    <type>Checkbox</type>
</CustomField>