force-app/main/default/objects/Opportunity/fields/What_is_your_Frequency_of_Service__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_Frequency_of_Service__c</fullName>
    <description>what the customer believes their frequency is</description>
    <label>What is your Frequency of Service</label>
    <type>TextArea</type>
</CustomField>