force-app/main/default/objects/Opportunity/fields/year5_test_covered__c.field-meta.xml
<CustomField>
    <fullName>year5_test_covered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does vendor contract include 5 year test?</inlineHelpText>
    <label>5 year test covered</label>
    <type>Checkbox</type>
</CustomField>