force-app/main/default/objects/Opportunity/fields/year5_test_date__c.field-meta.xml
<CustomField>
    <fullName>year5_test_date__c</fullName>
    <label>5 year test date</label>
    <type>Date</type>
</CustomField>