force-app/main/default/objects/Opportunity/recordTypes/SAFE_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>SAFE_Maintenance</fullName>
    <active>true</active>
    <businessProcess>Vendor Contract</businessProcess>
    <label>SAFE Maintenance</label>
</RecordType>