force-app/main/default/objects/Opportunity/recordTypes/SAFE_Modernization.recordType-meta.xml
<RecordType>
    <fullName>SAFE_Modernization</fullName>
    <active>true</active>
    <businessProcess>SAFE Modernization</businessProcess>
    <label>SAFE Modernization</label>
</RecordType>