force-app/main/default/objects/Opportunity/recordTypes/SAFE_Repair.recordType-meta.xml
<RecordType>
    <fullName>SAFE_Repair</fullName>
    <active>true</active>
    <businessProcess>SAFE Repair</businessProcess>
    <label>SAFE Repair</label>
</RecordType>