force-app/main/default/objects/Opportunity/recordTypes/Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>CARE</businessProcess>
    <description>CARE Sales Opportunity</description>
    <label>Sales Opportunity</label>
</RecordType>