force-app/main/default/objects/Opportunity/recordTypes/Vendor_Contract.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Contract</fullName>
    <active>true</active>
    <businessProcess>Vendor Contract</businessProcess>
    <description>Vendor Contract</description>
    <label>Vendor Contract</label>
</RecordType>