force-app/main/default/objects/Opportunity/listViews/Vendor_Contracts.listView-meta.xml
<ListView>
    <fullName>Vendor_Contracts</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Frequency_of_service__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Vendor_Contract</value>
    </filters>
    <label>Vendor Contracts</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>